// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar La Clase De Citas Actualizar Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1619454554855,
      "mascota": "Nuevo Nombre",
      "propietario": "Daniel",
      "sintomas": "Solo Duerme",
      "telefono": "2867598",
    },
  ],
}
`;

exports[`Probar La Clase De Citas Agregar Una Nueva Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1619454554855,
      "mascota": "Hook",
      "propietario": "Daniel",
      "sintomas": "Solo Duerme",
      "telefono": "2867598",
    },
  ],
}
`;

exports[`Probar La Clase De Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;
